# web

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  capacitor.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tailwind.config.ts  turbo.json  vite.config.ts
.cargo/: config.toml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
app/: .env.example  package.json  postcss.config.js  svelte.config.js  tailwind.config.ts  vite.config.ts
app/src/: app.css  app.d.ts  app.html  service-worker.js
app/src/lib/: _env.ts  config.ts  store.ts
app/src/lib/components/: app-init.svelte
app/src/lib/locale/: i18n.ts
app/src/lib/util/: callback.ts  conf.ts  err.ts  index.ts  lib.ts  routes.ts
app/src/lib/utils/: config.ts  i18n.ts
app/src/routes/: +layout.svelte  +layout.ts
app/src/routes/(app)/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
app/src/routes/(cfg)/: +layout.svelte  +layout.ts
app/static/: manifest.json
app/static/stylesheets/: apps-base.css  apps-ui.css  styles-maplibre-gl.css  styles-superellipse.css
crates/core/: Cargo.toml
crates/core/src/: error.rs  keystore.rs  lib.rs  types.rs  util.rs  utils.rs
crates/core/src/models/: location_gcs.rs  log_error.rs  media_upload.rs  mod.rs  nostr_profile.rs  nostr_profile_relay.rs  nostr_relay.rs  trade_product.rs  trade_product_location.rs  trade_product_media.rs
crates/core/src/nostr/: keys.rs
crates/model/: Cargo.toml
crates/model/src/: error.rs  lib.rs  types.rs  util.rs  wasm_executor.rs
crates/model/src/tables/: farm.rs  farm_location.rs  location_gcs.rs  log_error.rs  media_image.rs  mod.rs  nostr_profile.rs  nostr_profile_relay.rs  nostr_relay.rs  trade_product.rs  trade_product_location.rs  trade_product_media.rs
crates/model/web/sdk/sqlite/: opfs.js
crates/tangle/: Cargo.toml  tauri.conf.json
crates/tangle/capabilities/: default.json  mobile.json
crates/tangle/icons/: icon.icns
crates/tangle/migrations/down/: 0002_trade_product.sql  0003_nostr_profile.sql  0005_media_image.sql  0006_log_error.sql  0007_farm.sql  0008_nostr_profile_relay.sql  0009_farm_location.sql  0010_trade_product_location.sql
crates/tangle/migrations/up/: 0001_location_gcs.sql  0007_farm.sql  0009_trade_product_media.sql
crates/tangle/src/: app.rs  lib.rs  main.rs  util.rs
crates/tangle/src/commands/: keys.rs  mod.rs
crates/tangle/src/commands/model/: farm.rs  farm_location.rs  location_gcs.rs  log_error.rs  media_image.rs  mod.rs  nostr_profile.rs  nostr_profile_relay.rs  nostr_relay.rs  trade_product.rs  trade_product_location.rs  trade_product_media.rs
crates/tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
crates/tauri/capabilities/: default.json  desktop.json
crates/tauri/icons/: icon.icns
crates/tauri/migrations/: 0001_location_gcs.sql  0002_trade_product.sql  0003_nostr_profile.sql  0004_nostr_relay.sql  0005_media_upload.sql  0005_nostr_profile_relay.sql  0006_log_error.sql  0006_trade_product_location.sql  0008_trade_product_media.sql
crates/tauri/migrations/down/: 0001_location_gcs.sql  0004_nostr_relay.sql  0009_trade_product_media.sql
crates/tauri/migrations/up/: 0001_location_gcs.sql  0005_media_image.sql  0006_log_error.sql
crates/tauri/src/: database.rs  lib.rs  main.rs  radroots.rs  util.rs
crates/tauri/src/commands/: keys.rs
crates/tauri/src/commands/model/: location_gcs.rs  log_error.rs  media_image.rs  mod.rs  nostr_profile.rs  nostr_profile_relay.rs  nostr_relay.rs  trade_product.rs  trade_product_location.rs  trade_product_media.rs
crates/tauri/src/models/: location_gcs.rs  log_error.rs  media_upload.rs  mod.rs  nostr_profile.rs  nostr_profile_relay.rs  nostr_relay.rs  trade_product.rs  trade_product_location.rs  trade_product_media.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: ffi.rs  lib.rs  migrate.rs
crates/wasm/tangle_migrations/: 0009_farm_location.sql
ios/App/: InfoPlist.xcstrings  Podfile  PrivacyInfo.xcprivacy
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
src/: app.css  app.d.ts  app.html  global.d.ts
src/lib/: client.ts  conf.ts  stores.ts  types.ts  utils.ts
src/lib/components/: button-submit.svelte  button_appearing_pair.svelte  image_upload_add_photo.svelte  image_upload_control.svelte  image_upload_display.svelte  image_upload_edit_envelope.svelte  image_upload_multi.svelte  image_upload_row.svelte  index.ts  layout-trellis-line.svelte  layout-trellis.svelte  layout-view.svelte  layout-window.svelte  layout_window.svelte  line_entries_between.svelte  line_entry_data.svelte  line_entry_label.svelte  map-marker-dot.svelte  map-marker.svelte  map_choose_location.svelte  map_control_full.svelte  map_full_envelope.svelte  map_marker_dot.svelte  map_point_display.svelte  map_point_select.svelte  map_point_select_envelope.svelte  map_popup_location_info.svelte  map_popup_point_geolocation.svelte  map_select_point.svelte  nav.svelte  search_result_container.svelte  search_result_display.svelte  tabs.svelte  trade_field_display_el.svelte  trade_field_display_kv.svelte  trade_product_list_card.svelte
src/lib/css/: form.css  spinner-12.css  spinner-6.css  spinner.css
src/lib/util/: client.ts  error.ts  fetch-radroots-profile.ts  fetch-radroots-upload.ts  fetch.ts  geocode.ts  kv.ts  models-media-upload.ts  models-trade-product.ts  models.ts  nostr-sync.ts  nostr.ts
src/lib/utils/: client.ts  fetch.ts  geocode.ts  index.ts  keystore.ts  kv.ts  location_gcs.ts  models.ts  nostr.ts  trade_product.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
src/routes/(app)/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(app)/map/: +page.svelte
src/routes/(app)/nostr/: +page.svelte
src/routes/(app)/notifications/: +page.svelte
src/routes/(app)/search/: +page.svelte
src/routes/(app)/settings/: +page.svelte
src/routes/(app)/test/: +page.svelte
src/routes/(conf)/: +layout.ts
static/: keyva.min.js  splashscreen.html  squircle.min.js
static/styles/: maplibre_gl.css
(+68 files in other folders)
