[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = { version = "1" }
