[package]
name = "radroots_core"
version = "0.0.1"
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.64"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4" 
regex = "1.11.0"
futures = "0.3.31"
