[package]
name = "tangle_core"
version = "0.0.1"
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.64"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4" 
regex = "1.11.0"
base64 = "0.22"
nostr-sdk = { version = "0.37", features = [] }
