[package]
name = "tangle_model"
version.workspace = true
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
thiserror = "1.0"
tangle_core = { path = "../core" }
