[package]
name = "tangle"
version = "0.0.1"
authors = ["Radroots Authors"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tangle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = { path = "../../../lib/plugins-workspace/plugins/dialog" }
tauri-plugin-fs = { path = "../../../lib/plugins-workspace/plugins/fs" }
tauri-plugin-geolocation = { path = "../../../lib/plugins-workspace/plugins/geolocation" }
tauri-plugin-http = { path = "../../../lib/plugins-workspace/plugins/http" }
tauri-plugin-notification = { path = "../../../lib/plugins-workspace/plugins/notification" }
tauri-plugin-os = { path = "../../../lib/plugins-workspace/plugins/os" }
tauri-plugin-store = { path = "../../../lib/plugins-workspace/plugins/store" }
tauri-plugin-shell = { path = "../../../lib/plugins-workspace/plugins/shell" }

tangle_core = { path = "../core" }
tangle_model = { path = "../model" }

serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
