[package]
name = "radroots"
version = "0.0.1"
authors = ["Radroots Authors"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "radroots_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
env_logger = "0.11.5"
keyring = { version = "3.2.0", features = ["apple-native", "linux-native", "windows-native"] }
log = "0.4"
radroots_core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-geolocation = "2.0.0"
tauri-plugin-http = "2.0.0"
tauri-plugin-log = "2.0.0"
tauri-plugin-map-display = { git = "https://github.com/inkibra/tauri-plugins", tag = "@inkibra/tauri-plugin-map-display@0.2.0", package="tauri-plugin-map-display" }
tauri-plugin-notification = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-store = "2.1.0"
tauri-plugin-shell = "2.0.0"

[profile.dev]
incremental = true
