[package]
name = "radroots"
version = "0.0.1"
authors = ["Radroots Authors"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "radroots_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = { version = "2.2.0" }
tauri-plugin-fs = { version = "2.2.0" }
tauri-plugin-geolocation = { path = "../../../../../../lib/plugins-workspace/plugins/geolocation/" }
tauri-plugin-http = { version = "2.2.0" }
tauri-plugin-notification = { version = "2.2.0" }
tauri-plugin-os = { version = "2.2.0" }
tauri-plugin-store = { version = "2.2.0" }
tauri-plugin-shell = { version = "2.2.0" }

radroots_core = { path = "../core" }
radroots_model = { path = "../model" }

serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
