[package]
name = "tangle_wasm"
version.workspace = true
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"

tangle_core = { path = "../core", features = ["wasm"] }
tangle_model = { path = "../model" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["v4", "js"], package = "uuid" }
